--- a/Random/gamepage.html
+++ b/Random/gamepage.html
@@ -6,7 +6,7 @@
     <title>Web Dev Showdown Game</title>
     
     <!-- Adding the favicon -->
-    <link rel="icon" href="https://n4sshh.github.io/Nasshh/favicon.png" type="image/png">
+    <link rel="icon" href="https://n4sshh.github.io/Nasshh/pakyu.jpg" type="image/jpg">
 
     <!-- Link to CSS file -->
     <link rel="stylesheet" href="style.css">
