--- a/Games/UX or Uh-Oh.html
+++ b/Games/UX or Uh-Oh.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UX or Uh-Oh?!</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="UX or Uh-oh.css">
 </head>
 <body>
   <div class="container">
@@ -19,6 +19,6 @@
     </div>
     <p id="result"></p>
   </div>
-  <script src="script.js"></script>
+  <script src="UX or Uh-oh.js"></script>
 </body>
 </html>
