Update UX or Uh-Oh.html

--- a/Games/UX or Uh-Oh.html
+++ b/Games/UX or Uh-Oh.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UX or Uh-Oh?!</title>
-  <link rel="stylesheet" href="UX or Uh-oh.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>UX or Uh-Oh</title>
+  <link rel="stylesheet" href="UX or Uh-Oh.css" />
 </head>
 <body>
   <div class="container">
-    <h1>UX or Uh-Oh?!</h1>
-    <p class="instructions">Decide if the website follows good UX design (UX) or not (Uh-Oh?!).</p>
-    <div class="game-screen">
-      <img src="kpedia.png" alt="Good UX" class="screenshot" id="screenshot">
-      <div class="buttons">
-        <button class="button" id="uxButton">UX</button>
-        <button class="button" id="uhOhButton">Uh-Oh?!</button>
-      </div>
+    <h1>UX or Uh-Oh?</h1>
+    <p class="instructions">Look at the screenshot and decide if it's good UX or not.</p>
+    <img id="screenshot" class="screenshot" src="" alt="UX Screenshot" />
+    <div class="buttons">
+      <button class="button" id="uxButton">UX</button>
+      <button class="button" id="uhOhButton">Uh-Oh</button>
     </div>
     <p id="result"></p>
+    <p id="progress"></p>
   </div>
-  <script src="UX or Uh-oh.js"></script>
+  <script src="UX or Uh-Oh.js"></script>
 </body>
 </html>
