--- a/Games/UX or Uh-Oh.html
+++ b/Games/UX or Uh-Oh.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UX or Uh-Oh?!</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="UX or Uh-Oh.css">
 </head>
 <body>
     <div class="container">
@@ -24,6 +24,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="UX or Uh-Oh.js"></script>
 </body>
 </html>
