--- a/Games/Code Match.html
+++ b/Games/Code Match.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Code Match Game</title>
-  <link rel="stylesheet" href="Code Match.css" />
+  <link rel="stylesheet" href="Code_Match.css" />
 </head>
 <body>
   <h1>🧠 Code Match</h1>
   <div class="game-board-container">
     <div id="gameBoard" class="game-board"></div>
   </div>  
-    <script src="Code Match.js"></script>
+    <script src="Code_Match.js"></script>
 </body>
 </html>
