--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UX Scenario Quiz</title>
+    <link rel="stylesheet" href="QuizThemed.css">
     <!-- Updated to EmailJS v3 SDK -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script>
