--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -77,7 +77,7 @@
 </head>
 <body>
     <div class="quiz-container">
-        <h1>UX Scenario Quiz (Interactive)</h1>
+        <h1>UX Scenario Quiz</h1>
         <p>Answer the questions below based on your knowledge of UX design principles.</p>
 
         <form id="quiz-form">
