--- a/Lendsay You're Beautiful.html
+++ b/Lendsay You're Beautiful.html
@@ -1,78 +1,76 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-    content="width=device-width,
-    initial-scale=1.0">
-    <title>You're Beautiful</title>
-    <style>
-      *
-  {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  }
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>You're Beautiful</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-  body
-  {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: #108dc7;  
-  background: #F56217; 
-  background: #0B486B;  
-  background: -webkit-linear-gradient(to right, #F56217, #0B486B);   
-  background: linear-gradient(to right, #F56217, #0B486B); 
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      background: linear-gradient(to right, #F56217, #0B486B);
+      font-family: Arial, sans-serif;
+      padding: 1rem;
+    }
 
-  }
+    .player {
+      position: relative;
+      width: 100%;
+      max-width: 350px;
+      background: #f1f3f4;
+      box-shadow: 0 50px 80px rgba(0, 0, 0, 0.5);
+      border-radius: 10px;
+      overflow: hidden;
+    }
 
-  .player
-  {
-  position: relative;
-  width: 350px;
-  background: #f1f3f4;
-  box-shadow: 0 50px 80px rgba(0,0,0,0.5);
-  border-radius: 10px;
-  }
+    .imgBox {
+      width: 100%;
+      height: auto;
+    }
 
- .player .imgBox
-  {
-  position: relative;
-  width: 100%;
-  height: 350px;
-  object-fit: cover;
-  }
+    .imgBox img {
+      width: 100%;
+      height: auto;
+      display: block;
+      object-fit: cover;
+    }
 
-  .player .imgBox img
-  {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 10px 0 0;
-  }
+    audio {
+      width: 100%;
+      outline: none;
+      display: block;
+    }
 
-  .player audio
-  { 
-  width: 100%;
-  outline: none;
-  }
-    </style>
-  </head>
-  <body>
-    <div class="player">
-      <div class="imgBox">
-        <img src="lendsay you're beautiful.jpg">
-      </div>
-      <audio controls>
-       <source src="James Blunt - You're Beautiful (Official Music Video) [4K].mp3">
-      </audio>
+    /* ✅ Media Query for smaller screens */
+    @media (max-width: 500px) {
+      .player {
+        max-width: 90%;
+      }
+
+      body {
+        flex-direction: column;
+        text-align: center;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="player">
+    <div class="imgBox">
+      <img src="lendsay you're beautiful.jpg" alt="Album Art" />
     </div>
-  </body>
+    <audio controls>
+      <source src="James Blunt - You're Beautiful (Official Music Video) [4K].mp3" type="audio/mp3" />
+      Your browser does not support the audio element.
+    </audio>
+  </div>
+</body>
 </html>
-
-
