--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -17,7 +17,7 @@
     <div class="quiz-container">
         <header>
             <h1><i class="fas fa-user-circle"></i> UX Design Principles Quiz</h1>
-            <p>Test your knowledge of UI/UX design concepts from the course material</p>
+            <p>Test your knowledge of UI/UX design concepts from the course material Made by Nash Eicker</p>
             <div class="progress-container">
                 <div class="progress-bar" id="progress-bar"></div>
                 <span id="progress-text">1/15</span>
