--- a/Lendsay You're Beautiful.html
+++ b/Lendsay You're Beautiful.html
@@ -5,92 +5,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>You're Beautiful</title>
   <style>
-    /* ✅ Reset and Box Sizing (Practical Application) */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
 
-    /* ✅ Flexible Layout & Practical Application */
     body {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
+      justify-content: center; /* Only horizontal centering */
       background: linear-gradient(to right, #F56217, #0B486B);
       font-family: Arial, sans-serif;
-      padding: 1rem;
+      padding: 2rem 1rem; /* Adds breathing space */
     }
 
-    /* ✅ Flexible Layout (uses max-width + responsive size) */
     .player {
       position: relative;
-      width: 100%;             /* Flexible width */
-      max-width: 350px;        /* Prevents overflow */
+      width: 100%;
+      max-width: 350px;
       background: #f1f3f4;
       box-shadow: 0 50px 80px rgba(0, 0, 0, 0.5);
       border-radius: 10px;
       overflow: hidden;
+      margin-top: 50px; /* Pushes it down a bit */
     }
 
-    /* ✅ Practical Application (album art container) */
-    .imgBox {
+    .imgBox img {
       width: 100%;
       height: auto;
-    }
-
-    /* ✅ Responsive Images */
-    .imgBox img {
-      width: 100%;             /* Responsive width */
-      height: auto;            /* Keeps aspect ratio */
       display: block;
-      object-fit: cover;       /* Ensures proper cropping */
+      object-fit: cover;
     }
 
-    /* ✅ Practical Application (audio player styling) */
     audio {
       width: 100%;
       outline: none;
       display: block;
     }
 
-    /* ✅ Media Queries: Mobile phones */
     @media (max-width: 500px) {
-      .player {
-        max-width: 90%;
-      }
-
-      body {
-        flex-direction: column;
-        text-align: center;
-      }
+      .player { max-width: 90%; }
+      body { flex-direction: column; text-align: center; }
     }
 
-    /* ✅ Media Queries: Tablets */
     @media (min-width: 501px) and (max-width: 768px) {
-      .player {
-        max-width: 400px;
-      }
+      .player { max-width: 400px; }
     }
 
-    /* ✅ Media Queries: Small desktops */
     @media (min-width: 769px) and (max-width: 1200px) {
-      .player {
-        max-width: 500px;
-      }
+      .player { max-width: 500px; }
     }
 
-    /* ✅ Media Queries: Large desktops */
     @media (min-width: 1201px) {
-      .player {
-        max-width: 600px;
-      }
+      .player { max-width: 600px; }
     }
   </style>
 </head>
 <body>
-  <!-- ✅ Practical Application: Music Player Interface -->
   <div class="player">
     <div class="imgBox">
       <img src="lendsay you're beautiful.jpg" alt="Album Art" />
