--- a/Datiles_E_Portfolio/Eportfolio.html
+++ b/Datiles_E_Portfolio/Eportfolio.html
@@ -71,6 +71,17 @@
     </article>
   </section>
 
+    <article>
+      <h2><a href="https://nashyy.infinityfreeapp.com/" target="_blank">BeatSphere: Where Music Comes Alive</a></h2>
+      <p>
+        An interactive showcase highlighting 6 world-renowned artists and their top songs, 
+        with the option for users to suggest additional artists like Paloma Faith. 
+        Dive into music, discover new favorites, and celebrate the artists that inspire millions. 
+      </p>
+    </article>
+  </section>
+
+
   <!-- Profile -->
   <section id="contact">
     <h1>My Profile</h1>
@@ -84,4 +95,5 @@
   </footer>
 </body>
 </html>
+
 
