--- a/Datiles_E_Portfolio/Eportfolio.html
+++ b/Datiles_E_Portfolio/Eportfolio.html
@@ -49,7 +49,8 @@
 
     <article>
       <h2><a href="https://n4sshh.github.io/Nasshh/Games/UX%20or%20Uh-Oh.html" target="_blank">UX or Uh-Oh?</a></h2>
-      <p>Test your ability to identify good and poor UX design practices. You'll see website screenshots – decide if they demonstrate good UX principles or have problems.</p>
+      <p>Test your ability to identify good and poor UX design practices.<br>
+      You’ll see website screenshots – decide if they demonstrate good UX principles or have problems.</p>
     </article>
 
     <article>
@@ -58,8 +59,9 @@
     </article>
 
     <article>
-      <h2><a href="https://n4sshh.github.io/Nasshh/Lendsay%20You're%20Beautiful.html" target="_blank">Simple Music Player</a></h2>
-      <p>A simple music player UI built with HTML, CSS, and JS.</p>
+      <h2><a href="https://n4sshh.github.io/Nasshh/Lendsay%20You're%20Beautiful.html" target="_blank">BeatSphere: Where Music Comes Alive</a></h2>
+      <p>A music-inspired project that highlights six featured artists while allowing users to suggest their own favorites. 
+      Paloma is an example of a suggested artist, showing how the audience can help shape the experience.</p>
     </article>
 
     <article>
@@ -70,17 +72,6 @@
       – Navigate back and forth between questions</p>
     </article>
   </section>
-
-    <article>
-      <h2><a href="https://nashyy.infinityfreeapp.com/" target="_blank">BeatSphere: Where Music Comes Alive</a></h2>
-      <p>
-        An interactive showcase highlighting 6 world-renowned artists and their top songs, 
-        with the option for users to suggest additional artists like Paloma Faith. 
-        Dive into music, discover new favorites, and celebrate the artists that inspire millions. 
-      </p>
-    </article>
-  </section>
-
 
   <!-- Profile -->
   <section id="contact">
@@ -95,5 +86,3 @@
   </footer>
 </body>
 </html>
-
-
