--- a/Datiles_E_Portfolio/Eportfolio.html
+++ b/Datiles_E_Portfolio/Eportfolio.html
@@ -59,9 +59,9 @@
     </article>
 
     <article>
-      <h2><a href="https://n4sshh.github.io/Nasshh/Lendsay%20You're%20Beautiful.html" target="_blank">BeatSphere: Where Music Comes Alive</a></h2>
-      <p>A music-inspired project that highlights six featured artists while allowing users to suggest their own favorites. 
-      Paloma is an example of a suggested artist, showing how the audience can help shape the experience.</p>
+      <h2><a href="https://n4sshh.github.io/Nasshh/Lendsay%20You're%20Beautiful.html" target="_blank">BeatSphere</a></h2>
+      <p>A music-inspired interactive project where users can explore featured artists and even suggest their own favorites.<br>
+      Example: Paloma was added through a user suggestion, showing how the audience shapes the experience.</p>
     </article>
 
     <article>
