--- a/Datiles_E_Portfolio/Eportfolio.html
+++ b/Datiles_E_Portfolio/Eportfolio.html
@@ -59,9 +59,15 @@
     </article>
 
     <article>
-      <h2><a href="https://n4sshh.github.io/Nasshh/Lendsay%20You're%20Beautiful.html" target="_blank">BeatSphere</a></h2>
-      <p>A music-inspired interactive project where users can explore featured artists and even suggest their own favorites.<br>
-      Example: Paloma was added through a user suggestion, showing how the audience shapes the experience.</p>
+      <h2><a href="https://nashyy.infinityfreeapp.com/" target="_blank">BeatSphere</a></h2>
+      <p><strong>BeatSphere: Where Music Comes Alive.</strong><br>
+      A digital space highlighting six featured artists while letting users suggest their own favorites.<br>
+      Designed to blend interactive UI with community-driven engagement, showing how audiences can shape music experiences.</p>
+    </article>
+
+    <article>
+      <h2><a href="https://n4sshh.github.io/Nasshh/Lendsay%20You're%20Beautiful.html" target="_blank">Simple Music Player</a></h2>
+      <p>A lightweight web-based music player demo built with HTML, CSS, and JavaScript concepts.</p>
     </article>
 
     <article>
