--- a/Datiles_E_Portfolio/Eportfolio.html
+++ b/Datiles_E_Portfolio/Eportfolio.html
@@ -67,7 +67,7 @@
 
     <article>
       <h2><a href="https://n4sshh.github.io/Nasshh/Lendsay%20You're%20Beautiful.html" target="_blank">Simple Music Player</a></h2>
-      <p>A lightweight web-based music player demo built with HTML, CSS, and JavaScript concepts.</p>
+      <p>A lightweight web-based music player demo built with HTML and CSS concepts.</p>
     </article>
 
     <article>
