--- a/ladygaga.html
+++ b/ladygaga.html
@@ -20,7 +20,7 @@
         <div class="video-grid">
             <div class="video-item">
                 <video controls>
-                    <source src="Lady GAGA MP4/Lady Gaga - Alejandro (Official Music Video).mp4" type="video/mp4">
+                    <source src="https://n4sshh.github.io/Nash/LadyGaga%20MP4/Lady%20Gaga%20-%20Alejandro%20(Official%20Music%20Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Alejandro</h4>
@@ -28,7 +28,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source src="Lady GAGA MP4/Lady Gaga - Born This Way (Official Music Video).mp4" type="video/mp4">
+                    <source src="https://n4sshh.github.io/Nash/LadyGaga%20MP4/Lady%20Gaga%20-%20Born%20This%20Way%20(Official%20Music%20Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Born This Way</h4>
@@ -36,7 +36,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source src="Lady GAGA MP4/Lady Gaga - Paparazzi (Official Music Video).mp4" type="video/mp4">
+                    <source src="https://n4sshh.github.io/Nash/LadyGaga%20MP4/Lady%20Gaga%20-%20Paparazzi%20(Official%20Music%20Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Paparazzi</h4>
@@ -44,7 +44,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source src="Lady GAGA MP4/Lady Gaga - Poker Face (Official Music Video) - LadyGagaVEVO (720p, h264).mp4" type="video/mp4">
+                    <source src="https://n4sshh.github.io/Nash/LadyGaga%20MP4/Lady%20Gaga%20-%20Poker%20Face%20(Official%20Music%20Video)%20-%20LadyGagaVEVO%20(720p,%20h264).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Poker Face</h4>
@@ -52,7 +52,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source src="Lady GAGA MP4/Lady Gaga, Bradley Cooper - Shallow (from A Star Is Born) (Official Music Video).mp4" type="video/mp4">
+                    <source src="https://n4sshh.github.io/Nash/LadyGaga%20MP4/Lady%20Gaga,%20Bradley%20Cooper%20-%20Shallow%20(from%20A%20Star%20Is%20Born)%20(Official%20Music%20Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Shallow</h4>
@@ -60,7 +60,7 @@
 
             <div class="video-item">
                 <video controls>
-                    <source src="Lady GAGA MP4/Lady Gaga, Bruno Mars - Die With A Smile (Official Music Video).mp4" type="video/mp4">
+                    <source src="https://n4sshh.github.io/Nash/LadyGaga%20MP4/Lady%20Gaga,%20Bruno%20Mars%20-%20Die%20With%20A%20Smile%20(Official%20Music%20Video).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h4>Die With A Smile</h4>
@@ -69,3 +69,4 @@
     </div>
 </body>
 </html>
+
