--- a/Mewbrew/cats.html
+++ b/Mewbrew/cats.html
@@ -155,7 +155,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="cat-card card h-100 border-0 shadow-sm">
               <div class="cat-image card-img-top">
-                <img src="img/cats/mini.jpg" alt="Mini - Calico Cat" class="img-fluid w-100 h-100" style="object-fit: cover;">
+                <img src="img/cats/Mini.jpg" alt="Mini - Calico Cat" class="img-fluid w-100 h-100" style="object-fit: cover;">
               </div>
               <div class="card-body">
                 <h3 class="card-title h4 mb-3">Mini</h3>
@@ -342,4 +342,5 @@
   <!-- Custom JS -->
   <script src="js/main.js"></script>
 </body>
+
 </html>
